🐛fix: [담당자] 티켓 로그 줄바꿈이 안되전 문제 whitespace-pre-wrap break-words로 해결 Related to: #79

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -317,7 +317,7 @@ body {
     @apply flex items-center gap-0.5 py-0.5 px-2 border-b;
   }
   .ticket-log-p-content {
-    @apply text-xs text-gray-0 font-semibold;
+    @apply text-xs text-gray-0 font-semibold whitespace-pre-wrap break-words;
   }
   .ticket-comment-bubble {
     @apply max-h-fit max-w-[70%] px-2 py-1 bg-white-2 border border-gray-1 rounded-md whitespace-pre-wrap break-words;
